Bug 276189 - bugs with networkmanager
Summary: bugs with networkmanager
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: KDED Module (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-21 14:09 UTC by wangbin
Modified: 2011-06-22 19:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wangbin 2011-06-21 14:09:25 UTC
Application: kded4 ($Id$)
KDE Platform Version: 4.6.3 (4.6.3)
Qt Version: 4.7.3
Operating System: Linux 2.6.39-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
- What I was doing when the application crashed:

When I use the networkmanager to creat a dsl, I didn't fill the first option and couldn't creat it, when I filled it with "server", I still couldn't connect to the internet, and after several times, it crashed.

The crash can be reproduced some of the time.

-- Backtrace:
Application: KDE 守护进程 (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f3cc1544760 (LWP 854))]

Thread 3 (Thread 0x7f3ca61b7700 (LWP 891)):
#0  0x00007f3cbec1e933 in poll () from /lib/libc.so.6
#1  0x00007f3cbbc6e7d4 in ?? () from /usr/lib/libglib-2.0.so.0
#2  0x00007f3cbbc6f0ba in g_main_loop_run () from /usr/lib/libglib-2.0.so.0
#3  0x00007f3ca646ebe4 in ?? () from /usr/lib/libgio-2.0.so.0
#4  0x00007f3cbbc93d16 in ?? () from /usr/lib/libglib-2.0.so.0
#5  0x00007f3cbfe43d40 in start_thread () from /lib/libpthread.so.0
#6  0x00007f3cbec26aed in clone () from /lib/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f3ca57ab700 (LWP 900)):
#0  0xffffffffff60017b in ?? ()
#1  0x00007f3ca57aab00 in ?? ()
#2  0x00007fff19bff6e2 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 1 (Thread 0x7f3cc1544760 (LWP 854)):
[KCrash Handler]
#6  0x0000000000000031 in ?? ()
#7  0x00007f3ca832ad6b in ConnectionList::removeConnection(Knm::Connection*) () from /usr/lib/libknmservice.so.4
#8  0x00007f3ca80f636e in NMDBusSettingsConnectionProvider::clearConnections() () from /usr/lib/libknm_nm.so
#9  0x00007f3ca80fc0ad in NMDBusSettingsConnectionProvider::serviceOwnerChanged(QString const&, QString const&, QString const&) () from /usr/lib/libknm_nm.so
#10 0x00007f3ca80b734b in NMDBusSettingsConnectionProvider::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libknm_nm.so
#11 0x00007f3cc01c67fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#12 0x00007f3cbd06af8f in QDBusConnectionInterface::serviceOwnerChanged(QString const&, QString const&, QString const&) () from /usr/lib/libQtDBus.so.4
#13 0x00007f3cbd06b4fc in QDBusConnectionInterface::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtDBus.so.4
#14 0x00007f3cc01c67fa in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#15 0x00007f3cbd06b05f in QDBusConnectionInterface::NameOwnerChanged(QString const&, QString const&, QString const&) () from /usr/lib/libQtDBus.so.4
#16 0x00007f3cbd06b56c in QDBusConnectionInterface::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtDBus.so.4
#17 0x00007f3cbd02d7c2 in ?? () from /usr/lib/libQtDBus.so.4
#18 0x00007f3cbd0370bf in ?? () from /usr/lib/libQtDBus.so.4
#19 0x00007f3cc01ca39e in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#20 0x00007f3cbf374174 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#21 0x00007f3cbf378fe1 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#22 0x00007f3cc0f3a9c6 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#23 0x00007f3cc01b3bbc in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#24 0x00007f3cc01b6f2f in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#25 0x00007f3cc01de413 in ?? () from /usr/lib/libQtCore.so.4
#26 0x00007f3cbbc6e29d in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#27 0x00007f3cbbc6ea78 in ?? () from /usr/lib/libglib-2.0.so.0
#28 0x00007f3cbbc6ed09 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#29 0x00007f3cc01de876 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#30 0x00007f3cbf4171be in ?? () from /usr/lib/libQtGui.so.4
#31 0x00007f3cc01b2db2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#32 0x00007f3cc01b2fb7 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#33 0x00007f3cc01b71ab in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#34 0x00007f3cb0107aa5 in kdemain () from /usr/lib/libkdeinit4_kded4.so
#35 0x0000000000408002 in _start ()

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2011-06-22 19:11:16 UTC
Git commit e0b2b70b194b76855673db60ebe34f8a5bdfd786 by Lamarque V. Souza.
Committed on 22/06/2011 at 19:06.
Pushed by lvsouza into branch 'nm09'.

Refactor fix 171fa5d72cc3d8d311c3c67661a0354249c168bd (Fix crash when
stopping NetworkManager-0.8.2.) because of changes introduced by commit
f275e85a18578eeb86abd3de88492a475b5d9a37 (simplify
NMDBusSettingsConnectionProvider: don't keep a second list of
Knm::Connection* around, look it up with findConnection instead.  This
also allows simplification of ManageConnectionWidget::editClicked).

BUG: 276189

M  +4    -8    backends/NetworkManager/nmdbussettingsconnectionprovider.cpp     
M  +1    -1    plasma_nm_version.h     

http://commits.kde.org/networkmanagement/e0b2b70b194b76855673db60ebe34f8a5bdfd786