Refactor fix 171fa5d72cc3d8d311c3c67661a0354249c168bd (Fix crash when stopping NetworkManager-0.8.2.) because of changes introduced by commit f275e85a18578eeb86abd3de88492a475b5d9a37 (simplify NMDBusSettingsConnectionProvider: don't keep a second list of Knm::Connection* around, look it up with findConnection instead.  This also allows simplification of ManageConnectionWidget::editClicked).

BUG: 276189